--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 This project contains mainly Wiki pages about android internals
 
 See https://github.com/keesj/gomo/wiki/ for an overview.
+or clone the Wiki git@github.com:keesj/gomo.wiki.git for offline edting.
